--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
+    "@angular/material": "^5.2.5",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
@@ -29,6 +30,7 @@
     "i": "^0.3.6",
     "ng-bootstrap": "^1.6.3",
     "rxjs": "^5.5.6",
+    "update-package-json": "0.0.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
