--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.0",
+    "@angular/animations": "^6.0.0",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
@@ -25,9 +25,11 @@
     "@ng-bootstrap/ng-bootstrap": "^1.1.2",
     "angular-calendar": "^0.24.0",
     "angular-font-awesome": "^3.1.2",
+    "angular-material": "^1.1.9",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "i": "^0.3.6",
+    "material-design-icons": "^3.0.1",
     "ng-bootstrap": "^1.6.3",
     "rxjs": "^5.5.6",
     "update-package-json": "0.0.0",
